# PicoPico

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  3ds_backend.cpp  CMakeLists.txt  Dockerfile  LOG.md  Makefile  README.md  backend.h  build_all.sh  data.h  engine.c  engine.h  entrypoint.cpp  header.h  hello-world.lua  hud.h  impl.cpp  main.c  main.cpp  parser.c  pico8api.c  pico_backend.c  rawdraw_backend.c  rec.sh  requirements.txt  sdkconfig  sdl_backend.c  sfx.c  st7789.h  static_game_data.h  synth.c  synth.h  to_c.py  udev_build.sh
.github/workflows/: build.yml
artifacts/: font.lua  hud.p8  luac  untitled.p8
board/: NOTES.md  board.kicad_prl  board.kicad_pro  board.kicad_sch  old
board/3dmodels/: power_switch.scad  power_switch.stl  speaker_holder.scad  switch.wings  switch.wrl  volumewheel.scad  volumewheel.stl  volumewheel.wings  volumewheel.wrl
board/picopico/: _autosave-picopico.kicad_pcb  check_netlist_vs_kconfig.py  fp-info-cache  fp-lib-table  picopico.bak  picopico.kicad_pcb  picopico.kicad_prl  picopico.kicad_pro  picopico.kicad_sch  picopico.kicad_sym  picopico.orcad.net  sym-lib-table
board/picopico/gerbers/: picopico-B_Cu.gbl  picopico-B_Mask.gbs  picopico-B_Silkscreen.gbo  picopico-Edge_Cuts.gm1  picopico-F_Cu.gtl  picopico-F_Mask.gts  picopico-F_Silkscreen.gto  picopico-NPTH.drl  picopico-PTH.drl  picopico-job.gbrjob
board/picopico/picopico.pretty/: 1.77 display.kicad_mod  23mm speaker.kicad_mod  DollaTecESP32.kicad_mod  GCT_USB4125-GF-A_REVA2.kicad_mod  audio.kicad_mod  debugpad.kicad_mod  evqq2_compact.kicad_mod  lcd smd.kicad_mod  pad.kicad_mod  speaker.kicad_mod  switch_slide_OS102011MA1QN1.kicad_mod  volume wheel.kicad_mod
carts/: awake.p8  celeste.p8  dice.p8  hello-world.p8  map.p8  nano_villager.p8  pumpkin.p8  shootingstar-2.p8  valdi.p8
esp/: CMakeLists.txt  Kconfig.projbuild  backend.c  hello_world_main.cpp  ili9340.c  ili9340.h  lua  st7789.c  st7789.h
examples/: aalpaca.p8  btnp.p8  bunny.p8  celeste.p8  hello-world.lua  map.p8  movement.lua  pigments.p8  rockets.p8  square_jump.p8  tennis.p8  terranova.p8  test_basic_gfx.p8
local_lua/: CMakeLists.txt
scripts/: build_all.sh  to_c.py  udev_build.sh
src/: 3ds_backend.cpp  a.c  b.c  backend.h  cart_console_interface.h  data.h  debug.c  engine.c  engine.h  entrypoint.c  hud.c  main.c  main.cpp  map_out.c  mylinker.script  parser.c  pico8.c  pico8.h  pico8_compiled_api.c  pico8_compiled_api.h  pico8_placeholders.c  pico8api.c  pico8api.h  rawdraw_backend.c  sdl_backend.c  sfx.c  st7789.c  synth.c  synth.h  test_backend.c  wasm_entrypoint.cpp
stdlib/: stdlib.lua
tests/: buf_to_bmp.py  buf_to_png.py  rawdraw_backend_test.cpp  run_tests.cpp  test_hello_world.c  test_hello_world.cpp  test_hud.c  test_hud.cpp  test_lua_regression.c  test_lua_regression.cpp  test_menu.c  test_menu.cpp  test_primitives.c  test_primitives.cpp  test_utils.c  test_utils.cpp
tests/carts/: test_basic_gfx.p8
tests/regression/: api.p8  asan.p8  generic.p8  other.p8  regression_tests.p8
