add_library(_local_lua_lib STATIC
		EXCLUDE_FROM_ALL
        ../lua/lapi.cpp
        ../lua/lauxlib.cpp
        ../lua/lbaselib.cpp
        ../lua/lbitlib.cpp
        ../lua/lcode.cpp
        ../lua/lcorolib.cpp
        ../lua/lctype.cpp
        ../lua/ldblib.cpp
        ../lua/ldebug.cpp
        ../lua/ldo.cpp
        ../lua/ldump.cpp
        ../lua/lfunc.cpp
        ../lua/lgc.cpp
        ../lua/linit.cpp
        ../lua/liolib.cpp
        ../lua/llex.cpp
        ../lua/lmem.cpp
        ../lua/loadlib.cpp
        ../lua/lobject.cpp
        ../lua/lopcodes.cpp
        ../lua/loslib.cpp
        ../lua/lparser.cpp
        ../lua/lpico8lib.cpp
        ../lua/lstate.cpp
        ../lua/lstring.cpp
        ../lua/lstrlib.cpp
        ../lua/ltable.cpp
        ../lua/ltablib.cpp
        ../lua/ltests.cpp
        ../lua/ltm.cpp
        ../lua/lundump.cpp
        ../lua/lvm.cpp
        ../lua/lzio.cpp

        ../lua/fix32.h
        ../lua/lapi.h
        ../lua/lauxlib.h
        ../lua/lcode.h
        ../lua/lctype.h
        ../lua/ldebug.h
        ../lua/ldo.h
        ../lua/lfunc.h
        ../lua/lgc.h
        ../lua/llex.h
        ../lua/llimits.h
        ../lua/lmem.h
        ../lua/lobject.h
        ../lua/lopcodes.h
        ../lua/lparser.h
        ../lua/lstate.h
        ../lua/lstring.h
        ../lua/ltable.h
        ../lua/ltests.h
        ../lua/ltm.h
        ../lua/luaconf.h
        ../lua/lua.h
        ../lua/lualib.h
        ../lua/lundump.h
        ../lua/lvm.h
        ../lua/lzio.h
        )

add_executable(luac ../lua/luac.cpp)
target_include_directories(luac PUBLIC
	../lua
	)
target_link_libraries(luac _local_lua_lib)
